--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <title>ShopAccLQ</title>
   </head>
-  <body>
+  <body className="flex flex-col min-h-screen">
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
